--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/src/assets/mrsamlogo(2).jpeg" />
+    <link rel="icon" type="image/jpeg" href="/assets/mrsamlogo(2).jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Portfolio</title>
     <link 
@@ -16,24 +16,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
-    <script type="text/javascript">
-    (function (l) {
-      if (l.search[1] === "/") {
-        var decoded = l.search
-          .slice(1)
-          .split("&")
-          .map(function (s) {
-            return s.replace(/~and~/g, "&");
-          })
-          .join("?");
-        window.history.replaceState(
-          null,
-          null,
-          l.pathname.slice(0, -1) + decoded + l.hash
-        );
-      }
-    })(window.location);
-  </script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
